Fix header on smaller devices

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -93,3 +93,17 @@ body {
   text-align: center;
 }
 
+@media screen and (min-width: 200px) {
+  .center-navbar {
+    margin-left: 10rem;
+  }
+}
+
+
+@media screen and (min-width: 1100px) {
+  .center-navbar {
+    margin: auto;
+  }
+  
+}
+
